--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,13 @@
 
     <div class="footer">
       <div class="container">
-        Test
+        <div class="primary-navigation">
+          <ul>
+            <li><%= link_to 'Home', '' %> |</li>
+            <li><%= link_to 'About', '' %> |</li>
+            <li><%= link_to 'Contact', '' %> </li>
+          </ul>
+        </div>
       </div>
     </div>
   </body>
