--- a/app/views/layouts/chat.html.erb
+++ b/app/views/layouts/chat.html.erb
@@ -41,8 +41,8 @@
       </div>
     </div>
 
-	<%# render 'shared/tcpsocket'%>
-	<%# render 'shared/xmpp_client'%>
+	<%= render 'shared/tcpsocket'%>
+	<%= render 'shared/xmpp_client'%>
 
   </body>
 </html>
