--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,7 +7,7 @@
     teams to collaborate on projects. It allows developers to chat.
   </p>
 
-  <p> <%= link_to "Login", "", :class => 'round' %></p>
+  <p> <%= link_to "Login", new_user_session_url, :class => 'round' %></p>
 </div>
 
 <div class="right-content">
