--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,2 +1,51 @@
-<h1>Rooms#show</h1>
-<p>Find me in app/views/rooms/show.html.erb</p>
+<h1>Room : <%= @room.nick %></h1>
+<div class  = 'chatbox shadow round'>
+	<div class = 'conversation-box'>
+    </div>
+	<div class = 'new-message-box'>
+		<%= form_for '', :as => '', :url => '' do %>
+		<%= submit_tag :send, :class => 'send-message-button' %> &nbsp; <%= text_area_tag :message, "", :rows => '3', :cols => '100' %>
+		<% end %>
+	</div>
+</div>
+
+
+
+<style>
+.chatbox{
+	background:#D2C9BF;
+	width: 100%;
+}
+
+.chatbox .conversation-box{
+	height:300px;
+	overflow:auto;
+}
+
+.chatbox .new-message-box{
+	
+}
+
+.chatbox textarea{
+	padding:1px;
+	width:90%;
+	height:40px;
+	font-size:16px;
+}
+
+.chatbox .send-message-button{
+	height:20px;
+	width:60px;
+	font-size:14px;
+	font-weight:bold;
+}
+
+.user-message {
+ 	background: none repeat scroll 0 0 #FFFFFF;
+    color: #222222;
+    margin: 1em auto auto;
+    
+    padding: 10px;
+    width: 90%;
+}
+</style>
