--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -119,3 +119,10 @@ input[type = 'text'], input[type='password']{
 	margin-top:1em;
 }
 
+.field_with_errors input{
+  border: 1px solid red;
+}
+
+.field_with_errors label{
+  color:red;
+}
