Full functional multiuser chat

--- a/app/views/layouts/chat.html.erb
+++ b/app/views/layouts/chat.html.erb
@@ -40,7 +40,8 @@
         </div>
       </div>
     </div>
-
+	
+	<%= yield :js %>
 	<%= render 'shared/tcpsocket'%>
 	<%= render 'shared/xmpp_client'%>
 
