--- a/app/views/shared/_xmpp_client.html.erb
+++ b/app/views/shared/_xmpp_client.html.erb
@@ -2,21 +2,26 @@
 <script>
 		
 		console.log('XmppClient partial loaded');
-		var hostname                = 'localhost';
-		var domain                  = 'siddharth-ravichandrans-macbook-pro.local';
-		var bare_jid                = '<%= current_user.jabber_credential.jabber_id %>';
-		var password                = '<%= current_user.jabber_credential.jabber_password %>';
-		var chatroom_domain			= 'conference.' + domain;
-	//	var username               = bare_jid + '@' + domain;
+		var hostname                               = 'localhost';
+		var domain                                 = 'siddharth-ravichandrans-macbook-pro.local';
+		var bare_jid                               = '<%= current_user.jabber_credential.jabber_id %>';
+		var password                               = '<%= current_user.jabber_credential.jabber_password %>';
+		var chatroom_domain                        = 'conference.' + domain;
+	//	var username                             = bare_jid + '@' + domain;
 
 		console.log('xmpp client connect request posted');
 		
 		function loginSuccess(){
 			alert('Login Successful');
 		//	xmpp_client.set_presence('available');
-			xmpp_client.join_room('100' + chatroom_domain, 'available', null)
-			console.log('JOIN ROOM Called');
+			alert(typeof ROOM_NICK);
+		   if(typeof ROOM_NICK != 'undefined'){
+				 xmpp_client.join_room(ROOM_NICK, chatroom_domain, bare_jid, 'available', null);		 
+				 console.log('JOIN ROOM Called');
+			}	
 		}
+
+
 		
 		function loginFailure(){
 			console.log('Login Failed');
@@ -34,11 +39,11 @@
 		}
 		
 
-		var xmpp_client             = new XMPPClient;
+		var xmpp_client                            = new XMPPClient;
 		xmpp_client.connect('localhost', 5222);
 		
 
-		xmpp_client.onSocketConnect = function(){
+		xmpp_client.onSocketConnect                = function(){
 			$('.presence-status').html('('+ 'On Socket Connected'+')');
 			xmpp_client.connectServer(domain, serverConnectSuccess, serverConnectFailure);
 			console.log('After COnnect Server is called');	
@@ -47,7 +52,7 @@
 		}
 		
 		xmpp_client.onPresence = function(ntype, from) {
-			var username = bare_jid + '@' + domain + '/Orbited'; 
+			var username  = bare_jid + '@' + domain + '/Orbited'; 
 			if(from == username){
 				if (ntype == null){
 					$('.presence-status').html('(available)');
@@ -59,20 +64,11 @@
 		}
 		
 		xmpp_client.onMessage = function(jid, username, text) {
-			$('.conversation-box').append('<div class="user-message shadow">' + text + '</div>');
+			$('.conversation-box').append('<div class = "user-message shadow"> <b>' + username.split("/")[1] + ' says : </b>' + text + '</div>');
 			alert('JID' +  jid.to_s + ' Username ' + username + ' Text' + text);
 		}
 		
-	/*	self.join_room = function(room, status, status_msg) {
-	        room_id = room;
-	        room_jid = room_id + '/' + user;
-	        self.send(EXT_PRESENCE[0] + full_jid + EXT_PRESENCE[1] + room_jid + EXT_PRESENCE[3] + status + EXT_PRESENCE[4] + status_msg + EXT_PRESENCE[5]);
-	    } 
-	
-	self.groupchat_msg = function(content) {
-        self.send(construct(GROUPCHAT_MSG, [full_jid, room_id, content]));
-    }
-	*/
+
 	
 
 	
@@ -80,9 +76,9 @@
 		$('.send-message-button').click(function(){
 			
 			alert('Wats going on');
-			var message = $('#message').val();			
+			var message                               = $('#message').val();			
 		//	xmpp_client.msg('007@conference.' + domain, message);
-			xmpp_client.groupchat_msg(message);
+			xmpp_client.groupchat_msg(message, chatroom_domain);
 			return false;
 		});
 	});
