--- a/app/views/users/_signup_form.html.erb
+++ b/app/views/users/_signup_form.html.erb
@@ -25,7 +25,7 @@
       <%= f.password_field :password_confirmation %>
     </div>
 
-    <div class="field"
+    <div class="field">
        <%= f.submit 'Sign Up', :class => 'submit-button' %>
     </div>
 
