--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -104,6 +104,7 @@ input[type = 'text'], input[type='password']{
 
 .shadow{
     -moz-box-shadow:0 0 10px rgba(0, 0, 0, 0.2);
+	-webkit-box-shadow:0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 .new-form{
